# large-language-gibbs

./: .gitignore  LICENSE  README.md  pyproject.toml
consistent_reasoning/: .gitignore  __init__.py  dataloaders.py  models.py  pipeline.py  prompt_utils.py  query_runner.py  run_eval.py
consistent_reasoning/algorithms/: __init__.py  barker_gibbs.py  gambling_gibbs.py  gibbs.py  icm.py  npass.py  zeroshot.py
consistent_reasoning/eval_sets/: alpaca.json  build_eval_sets.py  gsm8k.json  truthfulQA.json
eval_sets/: gsm8k.json
sampling/: README.md  make_plot.py  run.py  run_multiseed.sh  run_parallel.sh  utils.py
sampling/templates/: gaussian.py  uniform.py
structure_learning/: .gitignore  README.md  generate_llm_data.py  generate_llm_data_parallel.sh  generate_prior_data.py  get_pgmpy_dataset.py  make_plot.py  train_dag_gflownet.py
structure_learning/dag_gflownet/: env.py  gflownet.py  train.py
structure_learning/dag_gflownet/nets/: gflownet.py  transformers.py
structure_learning/dag_gflownet/utils/: cache.py  exact_gflownet.py  exhaustive.py  gflownet.py  io.py  jraph_utils.py  jsd.py  np_utils.py  replay_buffer.py
structure_learning/datasets/bnrep_algalactivity2/: cpds.pkl  data_n100_sd42.csv  gt_graph.csv  meta_data.json
structure_learning/datasets/bnrep_consequenceCovid/: cpds.pkl  data_n100_sd42.csv  gt_graph.csv  meta_data.json
structure_learning/datasets/bnrep_disputed1/: cpds.pkl  data_n100_sd42.csv  gt_graph.csv  meta_data.json
structure_learning/datasets/bnrep_knowledge/: cpds.pkl  data_n100_sd42.csv  gt_graph.csv  meta_data.json
structure_learning/datasets/bnrep_tubercolosis/: cpds.pkl  data_n100_sd42.csv  gt_graph.csv  meta_data.json
structure_learning/priors/: __init__.py  base.py  llm_priors.py  uninformative_priors.py
structure_learning/scores/: __init__.py  base.py  bde_score.py  bge_score.py
structure_learning/scripts/: check_dag_gflownet_results.py  check_priors.py  generate_llm_data.sh
structure_learning/utils/: bn_utils.py  eval_utils.py  llm_data_utils.py  math_utils.py  misc_utils.py  nx_utils.py  plot_utils.py  prompt_utils.py  score_utils.py
