[project]
name = "large-language-gibbs"
version = "0.1.0"
description = "Structured Inference with Large Language Gibbs"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "priorbot[remote-llm]",
    "numpy",
    "matplotlib",
    "tqdm",
]

[project.optional-dependencies]
consistent-reasoning = [
    "requests>=2.32.0",
    "tiktoken>=0.8.0",
]

structure-learning = [
    "pgmpy",
    "jax>=0.9.1",
    "flax>=0.12.5",
    "optax>=0.2.6",
    "networkx>=3.6.1",
    "gym>=0.22.0",
    "dm-haiku",
    "scikit-learn>=1.7.2",
    "jraph>=0.0.6.dev0",
]

structure-learning-cuda12 = [
    "large-language-gibbs[structure-learning]",
    "jax[cuda12]>=0.9.1",
]

structure-learning-cuda13 = [
    "large-language-gibbs[structure-learning]",
    "jax[cuda13]>=0.9.1",
]

[tool.uv.sources]
priorbot = { git = "https://github.com/henrygouk/priorbot.git", rev = "fa8114e462ae731dc5c1d535ecac16a56fe658c2" }
pgmpy = { git = "https://github.com/pgmpy/pgmpy.git", rev = "4c2cdb9c6a28e322c489c7e1eeff704536256a8a" }

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sampling", "structure_learning", "consistent_reasoning"]

[tool.black]
line-length = 100
